Add platform_detect.h from CrissCross.
Resolves GH-1.

Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ set(erbium_SOURCES
 
 set(erbium_INCLUDES
 	${ER_INCLUDE_DIR}/erbium_version.h
+	${ER_INCLUDE_DIR}/platform_detect.h
 )
 
 include_directories(${ER_INCLUDE_DIR})
