--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ set(erbium_SOURCES
 )
 
 set(erbium_INCLUDES
+	${ER_INCLUDE_DIR}/erbium.h
 	${ER_INCLUDE_DIR}/erbium_version.h
 	${ER_INCLUDE_DIR}/platform_detect.h
 )
