Add GLFW dependency
See GH-5.

Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -2,4 +2,5 @@ if(NOT ER_CONTRIB_DOWNLOAD_DIR)
 	set(ER_CONTRIB_DOWNLOAD_DIR ${ER_CONTRIB_DIR}/downloads)
 endif()
 
+include(ExternalGLFW)
 include(ExternalLua51)
