Add GLEW dependency
See GH-5.

Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ link_directories("${ER_TARGET_OUT_DIR}/lib")
 
 add_library(erbium STATIC ${erbium_SOURCES} ${erbium_INCLUDES})
 add_dependencies(erbium
+	glew
 	glfw
 	lua51
 )
@@ -108,6 +109,7 @@ set_target_properties(erbium PROPERTIES
 
 merge_static_libs(erbium_combined OUTPUT_NAME erbium
 	erbium
+	glew
 	glfw
 	lua51
 )
