Add er_init() and er_quit()
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ include("${ER_CONTRIB_DIR}/CMakeLists.txt")
 #
 
 set(erbium_SOURCES
+	${ER_SOURCE_DIR}/app.c
+	${ER_SOURCE_DIR}/internal.h
 	${CMAKE_CURRENT_BINARY_DIR}/er_version.c
 )
 
