--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ set(erbium_SOURCES
 	${ER_SOURCE_DIR}/string_utils.c
 	${ER_SOURCE_DIR}/cJSON.c
 	${ER_SOURCE_DIR}/cJSON.h
+	${ER_SOURCE_DIR}/uthash.h
 	${CMAKE_CURRENT_BINARY_DIR}/er_version.c
 )
 
