--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ include("${ER_CONTRIB_DIR}/CMakeLists.txt")
 set(erbium_SOURCES
 	${ER_SOURCE_DIR}/app.c
 	${ER_SOURCE_DIR}/context.c
+	${ER_SOURCE_DIR}/context_glfw.c
 	${ER_SOURCE_DIR}/internal.h
 	${ER_SOURCE_DIR}/string_utils.c
 	${ER_SOURCE_DIR}/cJSON.c
