Implement graphics abstraction layer
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,8 @@ set(erbium_SOURCES
 	${ER_SOURCE_DIR}/app.c
 	${ER_SOURCE_DIR}/context.c
 	${ER_SOURCE_DIR}/context_glfw.c
+	${ER_SOURCE_DIR}/graphics.c
+	${ER_SOURCE_DIR}/graphics_glfw.c
 	${ER_SOURCE_DIR}/internal.h
 	${ER_SOURCE_DIR}/io.c
 	${ER_SOURCE_DIR}/io_glfw.c
