--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ set(erbium_SOURCES
 	${ER_SOURCE_DIR}/internal.h
 	${ER_SOURCE_DIR}/io.c
 	${ER_SOURCE_DIR}/io_glfw.c
+	${ER_SOURCE_DIR}/properties.c
 	${ER_SOURCE_DIR}/string_utils.c
 	${ER_SOURCE_DIR}/uthash.h
 	${ER_SOURCE_DIR}/ccan/build_assert.h
