Fix build system to work on Linux
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ configure_file("${ER_SOURCE_DIR}/er_version.c.in" "${CMAKE_CURRENT_BINARY_DIR}/e
 # Dependencies
 #
 
+find_package(Threads REQUIRED)
+
 include("${ER_CONTRIB_DIR}/CMakeLists.txt")
 
 #
