Add gl renderer skeleton
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,8 @@ set(erbium_SOURCES
 	${ER_SOURCE_DIR}/subsystem.c
 	${ER_SOURCE_DIR}/subsystem/subsystem_defaults.h
 	${ER_SOURCE_DIR}/subsystem/subsystem_renderer.c
+	${ER_SOURCE_DIR}/subsystem/renderer/renderer.h
+	${ER_SOURCE_DIR}/subsystem/renderer/renderer_gl.c
 	${ER_SOURCE_DIR}/uthash.h
 	${ER_SOURCE_DIR}/ccan/build_assert.h
 	${ER_SOURCE_DIR}/ccan/check_type.h
