Don't static link with OpenAL on OS X
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,12 +141,15 @@ set(erbium_DEPENDENCIES
 	glfw
 	libpng
 	lua51
-	openal
 	ogg
 	vorbis
 	vorbisfile
 	zlib
 )
+
+if(NOT APPLE)
+	list(APPEND erbium_DEPENDENCIES openal)
+endif()
 
 add_dependencies(erbium ${erbium_DEPENDENCIES})
 set_target_properties(erbium PROPERTIES
