--- a/ErbiumConfig.cmake.in
+++ b/ErbiumConfig.cmake.in
@@ -13,11 +13,13 @@ if(APPLE)
     find_library(IOKIT_FRAMEWORK IOKit)
     find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
     find_library(CORE_VIDEO_FRAMEWORK CoreVideo)
+    find_library(OPENAL_FRAMEWORK OpenAL)
     list(APPEND erbium_LIBRARIES
         ${COCOA_FRAMEWORK}
         ${IOKIT_FRAMEWORK}
         ${CORE_FOUNDATION_FRAMEWORK}
         ${CORE_VIDEO_FRAMEWORK}
+        ${OPENAL_FRAMEWORK}
     )
 elseif(UNIX)
     find_package(X11 REQUIRED)
