--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -6,6 +6,8 @@ include(ExternalFreetype)
 include(ExternalGLEW)
 include(ExternalGLFW)
 include(ExternalLua51)
-include(ExternalOpenAL)
+if(NOT APPLE)
+	include(ExternalOpenAL)
+endif()
 include(ExternalPNG)
 include(ExternalOggVorbis)
