--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,11 +5,14 @@ if(APPLE)
 	find_library(IOKIT_FRAMEWORK IOKit)
 	find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
 	find_library(CORE_VIDEO_FRAMEWORK CoreVideo)
+	find_library(OPENAL_FRAMEWORK OpenAL)
 	list(APPEND er_LIBS
 		${COCOA_FRAMEWORK}
 		${IOKIT_FRAMEWORK}
 		${CORE_FOUNDATION_FRAMEWORK}
-		${CORE_VIDEO_FRAMEWORK})
+		${CORE_VIDEO_FRAMEWORK}
+		${OPENAL_FRAMEWORK}
+	)
 elseif(UNIX)
 	find_package(X11 REQUIRED)
 	list(APPEND er_LIBS
