Use more precise version regex
Signed-off-by: Eddie Ringle <eddie@eringle.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,11 +69,11 @@ if("${gitdesc}" MATCHES "NOTFOUND")
 	return()
 endif()
 set(er_VERSION_FULL "${gitdesc}")
-if(er_VERSION_FULL MATCHES "([0-9]+)\\.([0-9]+)\\.([0-9]+)-?([0-9]+-g[0-9a-f]+)?")
-	set(er_VERSION_MAJOR ${CMAKE_MATCH_1})
-	set(er_VERSION_MINOR ${CMAKE_MATCH_2})
-	set(er_VERSION_PATCH ${CMAKE_MATCH_3})
-	set(er_VERSION_EXTRA ${CMAKE_MATCH_4})
+if(er_VERSION_FULL MATCHES "^v?(([0-9]+)\\.([0-9]+)\\.([0-9]+)-?([0-9]+-g[0-9a-f]+)?)$")
+	set(er_VERSION_MAJOR ${CMAKE_MATCH_2})
+	set(er_VERSION_MINOR ${CMAKE_MATCH_3})
+	set(er_VERSION_PATCH ${CMAKE_MATCH_4})
+	set(er_VERSION_EXTRA ${CMAKE_MATCH_5})
 endif()
 
 message(STATUS "Building version: ${er_VERSION_FULL}")
